[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "pycobaltstrike"
authors = [
    { name = "Leon Jacobs", email = "leonja511@gmail.com" }
]
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)"
]
dynamic = ["version", "description"]
requires-python = ">=3.10"

[project.urls]
Source = "https://github.com/leonjza/pycobaltstrike"
